Add jsyslog dependency and download them from github account

--- a/build.yaml
+++ b/build.yaml
@@ -19,6 +19,9 @@ artifacts:
   javax_inject: javax.inject:javax.inject:jar:1
   javassist: org.javassist:javassist:jar:3.14.0-GA
 
+  jsyslog_message: org.realityforge:jsyslog-message:jar:1.0
+  jsyslog_message_sources: org.realityforge:jsyslog-message:jar:sources:1.0
+
   javax_interceptors: org.jboss.spec.javax.interceptor:jboss-interceptors-api_1.1_spec:jar:1.0.0.Beta1
 
   cal10n_api: ch.qos.cal10n:cal10n-api:jar:0.7.2
