--- a/build.yaml
+++ b/build.yaml
@@ -20,6 +20,7 @@ artifacts:
   javassist: org.javassist:javassist:jar:3.14.0-GA
 
   json_simple: com.googlecode.json-simple:json-simple:jar:1.1
+  joda_time: joda-time:joda-time:jar:1.6
 
   jsyslog_message: org.realityforge:jsyslog-message:jar:1.0
   jsyslog_message_sources: org.realityforge:jsyslog-message:jar:sources:1.0
