--- a/build.yaml
+++ b/build.yaml
@@ -19,8 +19,9 @@ artifacts:
   javax_inject: javax.inject:javax.inject:jar:1
   javassist: org.javassist:javassist:jar:3.14.0-GA
 
-  json_simple: com.googlecode.json-simple:json-simple:jar:1.1
   joda_time: joda-time:joda-time:jar:1.6
+
+  gson: com.google.code.gson:gson:jar:2.2.2
 
   jsyslog_message: org.realityforge:jsyslog-message:jar:1.1
   jsyslog_message_sources: org.realityforge:jsyslog-message:jar:sources:1.1
