Suppress some uneeded logging

--- a/etc/logging.properties
+++ b/etc/logging.properties
@@ -5,3 +5,5 @@ java.util.logging.ConsoleHandler.formatter = java.util.logging.SimpleFormatter
 
 .level = INFO
 org.jboss.weld.level = SEVERE
+org.jboss.weld.interceptor.util.InterceptionTypeRegistry.level = SEVERE
+org.apache.deltaspike.level = WARNING
