--- a/build.yaml
+++ b/build.yaml
@@ -19,8 +19,7 @@ artifacts:
 
   gson: com.google.code.gson:gson:jar:2.2.2
 
-  jsyslog_message: org.realityforge:jsyslog-message:jar:1.1
-  jsyslog_message_sources: org.realityforge:jsyslog-message:jar:sources:1.1
+  jsyslog_message: org.realityforge.jsyslog-message:jsyslog-message:jar:1.2
 
   netty: io.netty:netty:jar:3.6.5.Final
 
